[package]
name = "club_cafe_music_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
opus = "0.3.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
rodio = { version = "0.20.1", default-features = false }
symphonia = { version = "0.5.4", features = ["all"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
async-tungstenite = "*"
futures = "0.3.31"
smol = "2.0.2"
