[package]
name = "club_cafe_music_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
rodio = { version = "0.20.1", default-features = false }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
async-tungstenite = "*"
futures = { version = "0.3.31", default-features = false, features = ["std"] }
smol = "2.0.2"
log = "0.4.27"
systemd-journal-logger = "2.2.2"
simplelog = "0.12.2"
ureq = "3.0.12"
ffmpeg-next = "8.0.0"
